test/generics/errors/unknown_type_argument_error.hy
// Expect unknown type argument diagnostic
class List<T>
{
    List()
    {
    }
}

class Uses<T>
{
    List<U> invalidField
}

void main()
{
}